--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ body {
     margin: 0 auto;
     justify-content: center;
     text-align: center;
-    margin-bottom: 30px;
+
     h3{
         color: rgb(56, 53, 53);;
         padding-top: 50px;
@@ -126,6 +126,13 @@ body {
  .locatin-btn:active {
         background-color: #d4d4d4;
         color: black;
+    }
+
+    .dec {
+        padding-top: 40px;
+        margin: 0 auto;
+        font-weight: 100;
+        
     }
 }
 
