--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Hurricane&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Monsieur+La+Doulaise&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fleur+De+Leah&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Birthstone&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap');
 body {
     margin: 0 auto;
@@ -22,9 +22,10 @@ body {
     h1 {
         color: black;
         padding-top: 15px;
-        font-family: "Fleur De Leah", cursive;
+        font-family:  cursive;
+
         font-weight: 200;
-        font-size: 40px;
+        font-size: 30px;
         margin: 0 auto;
 
     }
@@ -108,7 +109,7 @@ body {
     }
     .locatin-map {
         width: 300px;
-        height: 220px;
+        height: 200px;
         border-radius: 10px;
         margin-top: 20px;
     }
@@ -240,7 +241,7 @@ body {
     }
     p {
         color: rgb(255, 255, 255);
-        font-family: "Fleur De Leah", cursive;
+        font-family: cursive;
      
         font-weight: 300;
         font-size: 30px;
