--- a/style.css
+++ b/style.css
@@ -248,3 +248,14 @@ body {
         margin: 0 auto;
     }
 }
+
+.hidden-text {
+    opacity: 0;
+    transform: translateY(100px);
+    transition: all 0.6s ease;
+  }
+  
+  .hidden-text.show {
+    opacity: 1;
+    transform: translateY(0);
+  }
