--- a/style.css
+++ b/style.css
@@ -253,6 +253,7 @@ body {
     opacity: 0;
     transform: translateY(100px);
     transition: all 0.6s ease;
+transition-delay: 0.5s;
   }
   
   .hidden-text.show {
