--- a/style.css
+++ b/style.css
@@ -251,9 +251,9 @@ body {
 
 .hidden-text {
     opacity: 0;
-    transform: translateY(100px);
-    transition: all 0.6s ease;
-transition-delay: 0.5s;
+    transform: translateY(30px);
+    transition: opacity 0.8s ease, transform 0.8s ease;
+transition-delay: 0.3s;
   }
   
   .hidden-text.show {
